fix main logo error

--- a/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
+++ b/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="navbar-div">
                 <a class="main-logo" asp-area="" asp-page="/Index">
-                    <img src="./book.png"  style="height: 50px;"> Library
+                    <img src="~/book.png"  style="height: 50px;"> Library
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
