--- a/RazorPagesLibraryProject/wwwroot/css/site.css
+++ b/RazorPagesLibraryProject/wwwroot/css/site.css
@@ -679,9 +679,33 @@ h6 {
     gap: 12px;
 }
 
-.random-btn {
+.random-btn, #logout {
     background-color: antiquewhite;
-    height: 50px;
+    height: 35px;
     width: 70px;
-    border-radius:8px
+    border-radius: 8px
 }
+
+.pagination {
+    margin: 30px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+}
+
+.page-item {
+    background-color: cornsilk;
+    width: 95px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+    .page-item.active {
+        background-color: chocolate;
+        color: white;
+    }
